--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
     "target": "es2016",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "lib": ["es2016", "dom"],
     "strict": true
     },
